syntax = "proto3";

option csharp_namespace = "gRPC.Protos";

package todoit;

service todoit{
// create
rpc CreateToDo(CreateToDoReq) returns (CreateToDoRes){}


// readsignal

rpc ReadTodo(ReadTodoReq) returns (ReadTodoRes){}

// readlist

rpc ListToDo(GetAllReq) returns (GetAllRes){}

//update

rpc UpdateToDo(UpdateToDoReq) returns (UpdateToDoRes){}

// delete

rpc DeleteToDo(DeleteToDoReq) returns (DeleteToDoRes){}

}

message CreateToDoReq{
	string Title = 1;
	string description = 2;
}

message CreateToDoRes{
	int32 id = 1;
}


message ReadTodoReq{
	int32 id = 1;
}

message ReadTodoRes{
	int32 id = 1;
	string title = 2;
	string description = 3;
	string status = 4;
}

message GetAllReq{}

message GetAllRes{
	repeated ReadTodoRes to_do = 1;
}

message UpdateToDoReq{
	int32 id = 1;
	string title = 2;
	string description = 3;
	string status = 4;
}

message UpdateToDoRes {
	int32 id = 1;
}

message DeleteToDoReq{
	int32 id = 1;
}

message DeleteToDoRes{
	int32 id = 1;
}
